--- a/bulletin/static/css/estilo.css
+++ b/bulletin/static/css/estilo.css
@@ -2,7 +2,7 @@ body,html{
 	margin: 0;
 	padding: 0;
 	font-family: "Roboto", sans-serif;
-	font-size: 0.95em;
+	/*font-size: 0.95em;*/
 }
 
 .axis path,
@@ -25,11 +25,24 @@ body,html{
   display: none;
   min-width: 20px;
   height: 105px;
-  background: none repeat scroll 0 0 #000;
-  border: 2px solid #ccc;
-	border-radius:10px;
+  background: none repeat scroll 0 0 #525252;
+  border: 2px solid #f5f5f5;
+	border-radius:5px;
   padding: 10px;
   text-align: center;
 	color: #fff;
-	opacity: 0.8;
+	opacity: 0.95;
+	font-size: 14px;
+}
+
+.grey-tooltip + .tooltip > .tooltip-inner {
+	background-color: #666666;
+	border: 2px solid #f5f5f5;
+	border-radius:5px;
+	opacity: 0.95;
+	color:#f9f9f9;
+	padding: 10px;
+	font-size: 14px;
+	margin-top: -9px;
+	min-width: 190px;
 }
