--- a/news/templates/news/_form.html
+++ b/news/templates/news/_form.html
@@ -51,7 +51,7 @@
 				<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 		</div>
 		{% if field.errors %}
-			<div class="alert alert-danger alert-dismissible" role="alert">
+			<div class="col-lg-12 col-md-12 col-sm-12 alert alert-danger alert-dismissible" role="alert">
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
