--- a/bulletin/templates/bulletin/_form.html
+++ b/bulletin/templates/bulletin/_form.html
@@ -1,7 +1,7 @@
 {% load static i18n %}
 {% load widget_tweaks %}
 
-<form method="post" action="" enctype="multipart/form-data">
+<form id="bulletin" method="post" action="" enctype="multipart/form-data">
 	{% csrf_token %}
 
 	{% render_field form.control_subject %}
@@ -48,8 +48,8 @@
 
 	<label for="{{ form.file_content.auto_id }}">{{ form.file_content.label }} <span>*</span></label>
 	<a href="{% url 'bulletin:download_file' file=goal_file %}"> {% trans "Click to download a xls file with the data of the goals" %}</a>
-	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
-		{% render_field form.file_content class='file-selector' %}
+	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput" data-file_id="{{ form.file_content.auto_id }}">
+		{% render_field form.file_content class='file-selector' data-max_size="1" data-mimetypes=mimeTypes %}
 
 		<div class="input-group common-file-input">
 					<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
@@ -74,23 +74,36 @@
 
 		<span id="helpBlock" class="help-block">{{ form.file_content.help_text }}</span>
 
-		{% if form.file_content.errors %}
-			<div class="alert alert-danger alert-dismissible" role="alert">
-					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				<ul>
-					{% for error in form.file_content.errors %}
-						<li>{{ error }}</li>
-					{% endfor %}
-				</ul>
-			</div>
-		{% endif %}
-	</div>
 
-	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+	</div>
+	
+	{% if form.file_content.errors %}
+		<div class="alert alert-danger alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			<ul>
+				{% for error in form.file_content.errors %}
+					<li>{{ error }}</li>
+				{% endfor %}
+			</ul>
+		</div>
+	{% endif %}
+
+	<div class="col-lg-12 col-md-12 col-sm-12 alert alert-danger alert-dismissible {{ form.file_content.auto_id }}-file-errors" style="display:none" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		<ul>
+			<li class="size" style="display:none">{% trans "The file is too large. It should have less than 1MB." %}</li>
+			<li class="format" style="display:none">{% trans 'File not supported.' %}</li>
+		</ul>
+	</div>
+	<br clear="all" />
+
+	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput" data-file_id="{{ form.indicators.auto_id }}">
 		<label for="{{ form.indicators.auto_id }}">{{ form.indicators.label }} <span>*</span></label>
-		{% render_field form.indicators class='file-selector' %}
+		{% render_field form.indicators class='file-selector' data-max_size="1" data-mimetypes=mimeTypes %}
 
 		<div class="input-group common-file-input">
 					<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
@@ -115,18 +128,29 @@
 
 		<span id="helpBlock" class="help-block">{{ form.indicators.help_text }}</span>
 
-		{% if form.indicators.errors %}
-			<div class="alert alert-danger alert-dismissible" role="alert">
-					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				<ul>
-					{% for error in form.indicators.errors %}
-						<li>{{ error }}</li>
-					{% endfor %}
-				</ul>
-			</div>
-		{% endif %}
+	</div>
+	
+	{% if form.indicators.errors %}
+		<div class="alert alert-danger alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			<ul>
+				{% for error in form.indicators.errors %}
+					<li>{{ error }}</li>
+				{% endfor %}
+			</ul>
+		</div>
+	{% endif %}
+
+	<div class="col-lg-12 col-md-12 col-sm-12 alert alert-danger alert-dismissible {{ form.indicators.auto_id }}-file-errors" style="display:none" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		<ul>
+			<li class="size" style="display:none">{% trans "The file is too large. It should have less than 1MB." %}</li>
+			<li class="format" style="display:none">{% trans 'File not supported.' %}</li>
+		</ul>
 	</div>
 
 	<legend>{% trans 'Common resources settings' %}</legend>
