--- a/subjects/templates/subjects/_form.html
+++ b/subjects/templates/subjects/_form.html
@@ -11,7 +11,7 @@
                 			<div class="col-md-12">
                     			<a data-parent="#coordinators_accordion" data-toggle="collapse" href="#students">
                     				<h4 class="panel-title">
-                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{{ field.label }}</label>
+                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{% trans 'Students' %}</label>
                     				</h4>
                     			</a>
                     		</div>
@@ -31,7 +31,7 @@
                 			<div class="col-md-12">
                     			<a data-parent="#professors_accordion" data-toggle="collapse" href="#professors">
                     				<h4 class="panel-title">
-                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{{ field.label }}</label>
+                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{% trans 'Professor' %}</label>
                     				</h4>
                     			</a>
                     		</div>
