Adjusting resource bug in save without selecting students

--- a/webpage/templates/webpages/_form.html
+++ b/webpage/templates/webpages/_form.html
@@ -203,7 +203,7 @@
         			<div class="col-md-12">
             			<a data-parent="#professors_accordion" data-toggle="collapse" href="#students">
             				<h4 class="panel-title">
-                    			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ form.students.auto_id }}">{{ form.students.label }}</label>
+                    			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ form.students.auto_id }}">{% trans 'Students' %}</label>
             				</h4>
             			</a>
             		</div>
