--- a/students_group/templates/groups/_form.html
+++ b/students_group/templates/groups/_form.html
@@ -11,7 +11,7 @@
                 			<div class="col-md-12">
                     			<a data-parent="#professors_accordion" data-toggle="collapse" href="#group_participants">
                     				<h4 class="panel-title">
-                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{{ field.label }}</label>
+                            			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{% trans 'Participants' %}</label>
                     				</h4>
                     			</a>
                     		</div>
