--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -43,6 +43,53 @@
 		padding-left: 10px;
 		padding-right: 10px;	
 	}
+	
+  	.logo-login{
+	    margin-top: 250px;
+	    margin-bottom: 30px;
+	    width: 20%;
+	}
+
+	h2{
+		font-size: 32pt;
+	}
+
+	p{
+		font-size: 32pt;
+	}
+
+	a{
+		font-size: 32pt;
+	}
+
+	input[type="text"] {
+		margin-top: 40px;
+	    height: 80px;
+	}
+
+	input[type="password"] {
+		margin-top: 40px;
+	    height: 80px;
+	}
+
+	.form-control {
+		font-size: 40pt;
+	}
+
+	.btn {
+    	font-size: 32pt;
+	}
+
+	span{
+		font-size: 32pt;
+	}
+
+	.contrast-login{
+		text-align:center;
+		margin-top: 100px;
+	}
+
+
 }
 
 @media(max-width: 768px) {
