Changing badge background in red theme

--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -19,7 +19,7 @@ body .container-fluid .well-inverse {
   color: #424242; }
 
 .notify_badge {
-  background-color: #616161 !important; }
+  background-color: #039BE5 !important; }
 
 .access-subject {
   background-color: #039BE5 !important;
