--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -6,7 +6,7 @@ $secondary-color: #A31616
 $primary-title: #424242
 $secondary-title: #D32F2F
 
-$primary-badge: #616161
+$primary-badge: #039BE5
 
 $primary-menu-bg: #D32F2F
 $primary-menu-color: #333333
