--- a/bulletin/templates/bulletin/update.html
+++ b/bulletin/templates/bulletin/update.html
@@ -18,8 +18,8 @@
 	{% breadcrumb topic 'subjects:topic_view' topic.subject.slug topic.slug %}
 
 	{% trans 'Edit: ' as bread %}
-	{% with bread|add:bulletin.name as bread_slug %}
-		{% breadcrumb bread_slug 'bulletin:update' topic.slug bulletin.slug %}
+	{% with bread|add:resource.name as bread_slug %}
+		{% breadcrumb bread_slug 'bulletin:update' topic.slug resource.slug %}
 	{% endwith %}
 {% endblock %}
 
