--- a/links/templates/links/update.html
+++ b/links/templates/links/update.html
@@ -18,8 +18,8 @@
 	{% breadcrumb topic 'subjects:topic_view' topic.subject.slug topic.slug %}
 	
 	{% trans 'Edit: ' as bread %}
-	{% with bread|add:link.name as bread_slug %}
-		{% breadcrumb bread_slug 'links:update' topic.slug link.slug %}
+	{% with bread|add:resource.name as bread_slug %}
+		{% breadcrumb bread_slug 'links:update' topic.slug resource.slug %}
 	{% endwith %}
 {% endblock %}
 
