--- a/pdf_file/templates/pdf_file/update.html
+++ b/pdf_file/templates/pdf_file/update.html
@@ -18,8 +18,8 @@
 	{% breadcrumb topic 'subjects:topic_view' topic.subject.slug topic.slug %}
 	
 	{% trans 'Edit: ' as bread %}
-	{% with bread|add:pdf_file.name as bread_slug %}
-		{% breadcrumb bread_slug 'pdf_file:update' topic.slug pdf_file.slug %}
+	{% with bread|add:resource.name as bread_slug %}
+		{% breadcrumb bread_slug 'pdf_file:update' topic.slug resource.slug %}
 	{% endwith %}
 {% endblock %}
 
