--- a/webconference/templates/webconference/update.html
+++ b/webconference/templates/webconference/update.html
@@ -19,8 +19,8 @@
 	{% breadcrumb topic 'subjects:topic_view' topic.subject.slug topic.slug %}
 
 	{% trans 'Edit: ' as bread %}
-	{% with bread|add:webconference.name as bread_slug %}
-		{% breadcrumb bread_slug 'webconfrences:update' topic.slug webconference.slug %}
+	{% with bread|add:resource.name as bread_slug %}
+		{% breadcrumb bread_slug 'webconfrences:update' topic.slug resource.slug %}
 	{% endwith %}
 {% endblock %}
 
