--- a/news/templates/news/view.html
+++ b/news/templates/news/view.html
@@ -14,17 +14,16 @@
 
 {% block content %}
 
-{% if messages %}
-    {% for message in messages %}
-        <script type="text/javascript">
-            {% if message.tags == "danger" %}
-                alertify.error('{{message}}');
-            {% else %}
-                alertify.success('{{message}}');
-            {% endif %}
-        </script>
-    {% endfor %}
-{% endif %}
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
 
   <div class="row-fluid panel panel-default" >
             <div class="panel-body" id="printArea">
