Adjusting alignment of outside pages

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -256,7 +256,7 @@
                 {% endblock %}           
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11">
+            <div id="page_content" class="col-xs-12 col-sm-12 col-md-11 col-lg-11">
                 {% block breadcrumbs %}
                     {% breadcrumb 'Home' 'home' %}
                 {% endblock %}
