--- a/users/templates/users/forgot_password.html
+++ b/users/templates/users/forgot_password.html
@@ -14,46 +14,46 @@
 
 {% block content %}
 	<div class="row">
-		<div class="col-lg-offset-1 col-md-offset-1">
-            <img src="{{ theme.large_logo_url }}" class="img-responsive center-block logo-login logo-register" alt="logo amadeus">
-        </div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<img src="{{ theme.large_logo_url }}" class="img-responsive center-block logo-login logo-register" alt="logo amadeus">
+		</div>
 	</div>
 
 	<div class="row">
-		<div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-lg-9 col-md-9 col-sm-10">
-    		{% if messages %}
-    			{% for message in messages %}
-    				<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-      					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        					<span aria-hidden="true">&times;</span>
-      					</button>
-      					<p>{{ message }}</p>
-    				</div>
-    			{% endfor %}
-    		{% endif %}
+		<div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-lg-8 col-md-8 col-sm-10">
+				{% if messages %}
+					{% for message in messages %}
+						<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+								<p>{{ message }}</p>
+						</div>
+					{% endfor %}
+				{% endif %}
 
-    		<div class="card">
-      			<div class="card-block">
-        			<div class="row">
-          				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-            				<h2 class="outside-title"><strong> {% trans 'Forgot Password' %} </strong></h2>
-            				<p>{% trans 'Enter your email below (the one used to access the platform) to recover your password' %}</p>
-          				</div>
-        			</div>
-        			
-        			<form id="form-reset" method="post" action="">
-          				{% csrf_token %}
-          				{% for field in form %}
-          					<div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
-	          					<div class="form-group{% if form.has_error %} has-error {% endif %}">
-	          						{% render_field field class='form-control' %}
+				<div class="card">
+						<div class="card-block">
+							<div class="row">
+									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+										<h2 class="outside-title"><strong> {% trans 'Forgot Password' %} </strong></h2>
+										<p>{% trans 'Enter your email below (the one used to access the platform) to recover your password' %}</p>
+									</div>
+							</div>
+							
+							<form id="form-reset" method="post" action="">
+									{% csrf_token %}
+									{% for field in form %}
+										<div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+											<div class="form-group{% if form.has_error %} has-error {% endif %}">
+												{% render_field field class='form-control' %}
 									
-                                    <span id="helpBlock" class="help-block">{{ field.help_text }}</span>
+																		<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 									
-                                    {% if field.errors %}
+																		{% if field.errors %}
 										<div class="alert alert-danger alert-dismissible" role="alert">
-						  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						  						<span aria-hidden="true">&times;</span>
+												<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+													<span aria-hidden="true">&times;</span>
 												</button>
 											<ul>
 												{% for error in field.errors %}
@@ -62,24 +62,24 @@
 											</ul>
 										</div>
 									{% endif %}
-	            				</div>
-	            			</div>
-          				{% endfor %}
-        			</form>
-        			<div class="row">
-                        <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
-              				<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                				<button type="submit" class="btn btn-success btn-raised btn-block" form="form-reset" style="position: initial;"> {% trans 'Recover' %} </button>
-              				</div>
-              				<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                				<a class="btn btn-default btn-raised btn-block" href="{% url 'users:login' %}" formaction="#" style="position: initial;">{% trans 'Back' %}</a>
-              				</div>
-                        </div>
-        			</div>
-        		</div>
-      		</div>
-    	</div>
-  	</div>
+											</div>
+										</div>
+									{% endfor %}
+							</form>
+							<div class="row">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+											<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+												<button type="submit" class="btn btn-success btn-raised btn-block" form="form-reset" style="position: initial;"> {% trans 'Recover' %} </button>
+											</div>
+											<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+												<a class="btn btn-default btn-raised btn-block" href="{% url 'users:login' %}" formaction="#" style="position: initial;">{% trans 'Back' %}</a>
+											</div>
+												</div>
+							</div>
+						</div>
+					</div>
+			</div>
+		</div>
 {% endblock %}
 
 {% block bottommenu %}
