--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -45,9 +45,9 @@
 	}
 	
   	.logo-login{
-	    margin-top: 250px;
+	    margin-top: 150px;
 	    margin-bottom: 30px;
-	    width: 20%;
+	    width: 40%;
 	}
 
 	h2{
@@ -55,11 +55,11 @@
 	}
 
 	p{
-		font-size: 32pt;
+		font-size: 24pt;
 	}
 
 	a{
-		font-size: 32pt;
+		font-size: 24pt;
 	}
 
 	input[type="text"] {
@@ -77,11 +77,11 @@
 	}
 
 	.btn {
-    	font-size: 32pt;
+    	font-size: 24pt;
 	}
 
 	span{
-		font-size: 32pt;
+		font-size: 24pt;
 	}
 
 	.contrast-login{
@@ -89,7 +89,42 @@
 		margin-top: 100px;
 	}
 
+	/* Bottom Menu */
+	.clearfix {
+	    height: 60px;
+	}
 
+	.bottom-menu {
+		position: fixed;	    
+	    bottom: 0px;
+	    width: 100%;
+	    padding: 0px 30px;
+	    z-index: 999;
+	    height: 60px;
+	}
+
+	.mobile-menu {
+	    -webkit-padding-start: 0px;
+	    width: 100%;
+	}
+
+	.mobile-menu, .mobile-menu li {
+	    display: inline-block;
+	    float: left;
+	}
+
+	.mobile-menu .item {
+	    padding-top: 3px;
+	    text-align: center;
+	    height: 100px;
+	    width: 20%;
+	    font-size: 35px;
+	}
+
+	.mobile-menu a {
+	    font-size: 32pt;
+	}
+	/* End Bottom Menu */
 }
 
 @media(max-width: 768px) {
