--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -55,6 +55,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus_responsive.css' %}">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     {% block style %}
 	{% endblock %}
