--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -1,12 +1,12 @@
 /* === Variables === */
 
 $primary-color: #D32F2F
-$secondary-color: #A31616
+$secondary-color: #9A0007
 
 $primary-title: #424242
 $secondary-title: #D32F2F
 
-$primary-badge: #039BE5
+$primary-badge: #0277BD
 
 $primary-menu-bg: #D32F2F
 $primary-menu-color: #333333
@@ -27,7 +27,7 @@ $secondary-subject: #777777
 $primary-topic: #757575
 $secondary-topic: #919191
 
-$btn-success: #039BE5
+$btn-success: #03A9F4
 $btn-success-effect: #0277BD
 
 /* === End Variables === */
