--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -114,7 +114,7 @@
                             </div>
                             <span class="input-group-btn input-group-sm">
                                 <button type="submit" class="btn btn-primary" id="btn-search">
-                                    <i class="fa fa-search" aria-hidden="true" style="color:white; font-size:20px"></i>
+                                    <i class="fa fa-search" aria-hidden="true" style="font-size:20px"></i>
                                 </button>
                             </span>
                         </div>
