--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -222,6 +222,9 @@ body .container-fluid .well-inverse
 
 /* === Topbar === */
 
+#btn-search
+    color: $secondary-white
+
 #btn-search:hover 
     background: $secondary-color
 
