--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -177,6 +177,9 @@ body .container-fluid .well-inverse
 
 /* === Topbar === */
 
+#btn-search
+    color: $secondary-white
+
 #btn-search:hover 
     background: $secondary-color
 
