--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -173,6 +173,9 @@ body .container-fluid .well-inverse {
 
 /* === End Language Selector */
 /* === Topbar === */
+#btn-search {
+  color: #FFFFFF; }
+
 #btn-search:hover {
   background: #9A0007; }
 
