--- a/amadeus/static/css/themes/contrast.sass
+++ b/amadeus/static/css/themes/contrast.sass
@@ -129,7 +129,28 @@ body .container-fluid .well-inverse
 
 .bootstrap-tagsinput
     background-color: $primary-color
+    color: $secondary-white
     border: 1px solid $secondary-white
+
+.alert.alert-success,
+.alertify-notifier .ajs-message.ajs-success
+    color: $primary-color
+    background-color: $secondary-color
+    text-shadow: none
+
+/* === Carousel === */
+
+.carousel-caption
+    background: $primary-color
+    opacity: .9
+    text-shadow: none
+    bottom: 0px
+
+.carousel-caption a
+    color: $secondary-white
+
+/* === End Carousel === */
+
 
 /* === Forms === */
 
