--- a/amadeus/static/css/themes/red.sass
+++ b/amadeus/static/css/themes/red.sass
@@ -482,6 +482,10 @@ body .container-fluid .well-inverse
 .resource_list a 
     color: inherit
 
+.resource_list .category-card-items .dropdown-menu a:hover,
+.resource_list .category-card-items .dropdown-menu a:hover i
+    color: $secondary-white !important
+
 .resource_list .btn-group button:active, 
 .resource_list .btn-group button:focus, .resource_list .btn-group button:hover 
     background-color: initial !important
@@ -505,6 +509,7 @@ body .container-fluid .well-inverse
 
 .subject-participants .sub-user:hover
     background-color: $primary-menu-bg
+    color: $secondary-white
 
 /* === End Participants === */
 
